<?xml version="1.0"?>
<package>
  <name>roomblock</name>
  <version>0.0.1</version>
  <description>The roomblock meta package</description>

  <maintainer email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</maintainer>

  <license>BSD</license>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roomblock_bringup</run_depend>
  <run_depend>roomblock_description</run_depend>
  <run_depend>roomblock_mapping</run_depend>
  <run_depend>roomblock_navigation</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
