<?xml version="1.0"?>
<package>
  <name>roomblock_bringup</name>
  <version>0.0.1</version>
  <description>The roomblock_bringup package</description>

  <maintainer email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</maintainer>

  <license>BSD</license>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>create_node</run_depend>
  <!-- <run_depend>fake_joint_driver</run_depend> --> <!-- not releasead??? -->
  <run_depend>image_transport</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>python-serial</run_depend>
  <!-- <run_depend>raspicam_node</run_depend> --> <!-- not releasead??? only raspi? -->
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roomblock_description</run_depend>
  <run_depend>rplidar_ros</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>teleop_twist_joy</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
