<?xml version="1.0"?>
<package>
  <name>roomblock_mapping</name>
  <version>0.0.2</version>
  <description>The roomblock_mapping package</description>

  <maintainer email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</maintainer>

  <license>BSD</license>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gmapping</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>slam_karto</run_depend>
  <!-- <run_depend>cartographer_ros</run_depend> -->

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- the export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
