<?xml version="1.0"?>
<package>
  <name>roomblock_navigation</name>
  <version>0.0.2</version>
  <description>The roomblock_navigation package</description>

  <maintainer email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</maintainer>

  <license>BSD</license>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
